--- a/web/template/include/menu.xhtml
+++ b/web/template/include/menu.xhtml
@@ -10,7 +10,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <h:commandButton class="btn btn-outline-primary" action="/index?faces-redirect=true" value="index"/>
-                        <h:commandButton class="btn btn-outline-danger" action="/logout?faces-redirect=true" value="logout"/>
+                        <h:commandButton class="btn btn-outline-danger" action="/index?faces-redirect=true" value="logout"/>
                     </li>
                     <li class="nav-item">
                         <h:commandLink styleClass="nav-link" action="#{navigationBean.page('sirket')}" value="Sirket"/>
@@ -19,7 +19,19 @@
                         <h:commandLink styleClass="nav-link" action="#{navigationBean.page('calisanlar')}" value="Çalışanlar"/>
                     </li>
                     <li class="nav-item active">
+                        <h:commandLink styleClass="nav-link" action="#{navigationBean.page('musteri')}" value="Müşteri"/>
+                    </li>
+                    <li class="nav-item active">
+                        <h:commandLink styleClass="nav-link" action="#{navigationBean.page('turlar')}" value="Turlar"/>
+                    </li>
+                    <li class="nav-item active">
                         <h:commandLink styleClass="nav-link" action="#{navigationBean.page('document')}" value="Document"/>
+                    </li>
+                    <li class="nav-item active">
+                        <h:commandLink styleClass="nav-link" action="#{navigationBean.page('araclar')}" value="Araclar"/>
+                    </li>
+                    <li class="nav-item active">
+                        <h:commandLink styleClass="nav-link" action="#{navigationBean.page('subeler')}" value="Subeler"/>
                     </li>
                     <li class="nav-item active">
                         <h:commandLink styleClass="nav-link" action="#{navigationBean.page('user_yetki')}" value="Yetki"/>
