--- a/web/templateNormalKullanici/include/menu.xhtml
+++ b/web/templateNormalKullanici/include/menu.xhtml
@@ -9,14 +9,19 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <h:commandButton class="btn btn-outline-primary" action="/index?faces-redirect=true" value="index"/>
-                        <h:commandButton class="btn btn-outline-danger" action="/logout?faces-redirect=true" value="logout"/>
+                        <h:commandButton class="btn btn-outline-danger" action="/index?faces-redirect=true" value="logout"/>
                     </li>
                     <li class="nav-item active">
                         <h:commandLink styleClass="nav-link" action="#{navigationNkBean.page('sirket')}" value="Şirket" />
                     </li>
-                   
+                    <li class="nav-item active">
+                        <h:commandLink styleClass="nav-link" action="#{navigationNkBean.page('musteri')}" value="Müşteri" />
+                    </li>
                     <li class="nav-item">
-                        <h:commandLink styleClass="nav-link" action="#{navigationNkBean.page('calisanlar')}" value="Çalışanlar" />
+                        <h:commandLink styleClass="nav-link" action="#{navigationNkBean.page('turlar')}" value="Turlar" />
+                    </li>
+                    <li class="nav-item">
+                        <h:commandLink styleClass="nav-link" action="#{navigationNkBean.page('subeler')}" value="Şubeler" />
                     </li>
 
                 </ul>
